# ZeroNoise

./: .env  .env.example  CLAUDE.md  README.md  TECNICO.md  main.py  pyproject.toml
dtrack-deploy/: docker-compose.yml
instructions/: DEPCHECK_GATE_TOOL_INSTRUCTIONS.md  DEPCHECK_INGESTER_INSTRUCTIONS.md  SECURITY_INSTRUCTIONS.md
instructions/Roadmap/: 00_INDEX.md  01_B8_kotlin.md  02_B1B2_models.md  03_B1B2_artifact_inspector.md  04_B1B2_deptree_parser.md  05_B1B2_stage0_integration.md  06_B1B2_poc_artifact.md  07_B3_dt_background.md  08_B3_poc_dt_background.md  09_B4_sse_auth.md  10_B7_notifier.md  11_B5_git_client.md  12_B6_scheduler.md  13_fix_gradle_context.md
scripts/: poc_depcheck.py  poc_stage1.py  poc_stage2.py  poc_stage3.py
vuln_projects/nodejs-goof/: bom.json
zeronoise/: audit.py  config.py  server.py
zeronoise/analyzers/: artifact_inspector.py  base_scanner.py  dependency_tree_parser.py  java_import_scanner.py  js_import_scanner.py  project_context_reader.py  scanner_factory.py
zeronoise/clients/: depcheck_ingester.py  dependency_track.py
zeronoise/models/: artifact_finding.py  depcheck_finding.py  reachability.py  security_policy.py  vulnerability.py
zeronoise/tools/: _validators.py  code_context.py  decision.py  depcheck_gate.py  reachability.py  sbom_ingestion.py  stage3_context.py
